--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,6 +26,8 @@ layout: compress
                     {% endif %}
                     {% if page.project %}
                     <a class="btn zoombtn" href="{{site.url}}/projects/">
+                    {% if page.ctfs %}
+                    <a class="btn zoombtn" href="{{site.url}}/ctfs/">
                     {% else %}
                     <a class="btn zoombtn" href="{{site.url}}/posts/">
                     {% endif %}
