Added CTF Rankings subsection with 2 listings

--- a/_layouts/ctfs.html
+++ b/_layouts/ctfs.html
@@ -21,6 +21,17 @@ layout: compress
                         <i class="fa fa-home"></i>
                     </a>
                 </div>
+                
+                <div class="ctf ranks">
+                    <h2> 'CTF Rankings' </h2>
+                    <center>
+                        CTF Name            | Year | Ranking    | Team Name         | Personal Writeup | Link
+                        ---------------     | ---- | ---------  | ----------------- | ---------------- | ------------------
+                        CySCA               | 2018 | 27th/108   | snaex_on_a_plane  | N/A              | [Scoreboard Link](https://cyberchallenge.com.au/2018/scoreboard/index.html)
+                        CYBAR OSINT CTF     | 2020 | 51st/161   | ( ͡° ͜ʖ ͡°)          | TBD              | [Scoreboard Link](https://github.com/cybar-party/cybar-osint-ctf-2020/blob/master/Results.md)
+                    </center>
+                </div>
+
                 <div class="post-list">
                     {% for post in site.posts %} 
                         {% if post.ctfs %}
