--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -23,8 +23,7 @@ layout: compress
                 </div>
                 <div class="post-list">
                     {% for post in site.posts %} 
-                        {% if post.project == null %}
-                        {% if post.ctfs == null %}
+                        {% if post.project == null or post.ctfs == null %}
                     <ul>
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
                             <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
