--- a/_layouts/ctfs.html
+++ b/_layouts/ctfs.html
@@ -23,13 +23,8 @@ layout: compress
                 </div>
                 
                 <div class="ctf ranks">
-                    <h2> 'CTF Rankings' </h2>
-                    <center>
-                        CTF Name            | Year | Ranking    | Team Name         | Personal Writeup | Link
-                        ---------------     | ---- | ---------  | ----------------- | ---------------- | ------------------
-                        CySCA               | 2018 | 27th/108   | snaex_on_a_plane  | N/A              | [Scoreboard Link](https://cyberchallenge.com.au/2018/scoreboard/index.html)
-                        CYBAR OSINT CTF     | 2020 | 51st/161   | ( ͡° ͜ʖ ͡°)          | TBD              | [Scoreboard Link](https://github.com/cybar-party/cybar-osint-ctf-2020/blob/master/Results.md)
-                    </center>
+                    <h2> CTF Rankings </h2>
+                    {% include ctf_ranks.html %}
                 </div>
 
                 <div class="post-list">
